<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <group android:id="@+id/hh" android:menuCategory="container">

        <item android:id="@+id/suiviAlerte"
              android:title="@string/suiviAlerte"/>
        <item android:id="@+id/suiviDemande"
              android:title="@string/suiviDemande" />
        <item android:id="@+id/persInfo"
              android:title="@string/persInfo" />
        <item android:id="@+id/manageSituation"
            android:title="@string/ManageSituation" />
        <item android:id="@+id/createSituation"
            android:title="@string/CreateSituation" />

        <item android:id="@+id/settings"
              android:title="@string/settings" />


    </group>
</menu>
