<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="20dp"
                  android:paddingRight="20dp">


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/labelnom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/manage_user_nom"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:id="@+id/textNom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="7"
                    android:hint="@string/manage_user_nom"
                    android:inputType="textPersonName"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/labelprenom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/manage_user_prenom"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:id="@+id/textprenom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/manage_user_prenom"
                    android:inputType="textPersonName"/>
            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/labeldtnaiss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/manage_user_birthday"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:id="@+id/textDtNaiss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="date"/>

                <ImageButton
                    android:id="@+id/buttonSetDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/manage_user_selectdate"
                    android:cropToPadding="true"
                    android:onClick="selectDate"
                    android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"/>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/labeltel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/manage_user_phone"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:id="@+id/textTelephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"/>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/txthomme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/user_sexe"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <RadioGroup>

                    <RadioButton
                        android:id="@+id/radiohomme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Homme"/>

                    <RadioButton
                        android:id="@+id/radiofemme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Femme"/>
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/labelbloodtype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/manage_user_bloodtype"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/bloodtype_spinner"
                    style="@android:style/Widget.DeviceDefault.DropDownItem.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:clickable="true"
                    android:onClick="saveUser"
                    android:text="@string/manage_user_saveButton"/>
            </TableRow>


        </TableLayout>

    </LinearLayout>
</ScrollView>